--- a/components/navbar.html
+++ b/components/navbar.html
@@ -2,28 +2,6 @@
   <link href="./navbar.css" rel="stylesheet" />
   <div class="navbar-navbar-container">
     <header data-role="Header" class="navigation-container">
-      <img
-        alt="logo"
-        src="public/playground_assets/logo-1500h.png"
-        class="navbar-image"
-      />
-      <div class="navbar-nav">
-        <nav class="navigation-links-nav navigation-links-root-class-name10">
-          <span class="navbar-link"><span>Home</span></span>
-          <span class="navigation-links-text1 navbar-link">
-            <span>About</span>
-          </span>
-          <span class="navigation-links-text2 navbar-link">
-            <span>Features</span>
-          </span>
-          <span class="navigation-links-text3 navbar-link">
-            <span>Blog</span>
-          </span>
-          <span class="navigation-links-text4 navbar-link">
-            <span>Pricing</span>
-          </span>
-        </nav>
-      </div>
       <div data-type="BurgerMenu" class="navigation-burger-menu">
         <svg viewBox="0 0 1024 1024" class="navbar-icon">
           <path
@@ -31,13 +9,17 @@
           ></path>
         </svg>
       </div>
+      <div class="navbar-container">
+        <span class="navbar-text"><span>Disaster Alert Website</span></span>
+        <div class="navbar-nav"></div>
+      </div>
       <div data-type="MobileMenu" class="navigation-mobile-menu">
         <div class="navbar-nav1">
-          <div class="navbar-container">
+          <div class="navbar-container1">
             <img
               alt="image"
               src="public/playground_assets/logo-1500h.png"
-              class="navbar-image1"
+              class="navbar-image"
             />
             <div data-type="CloseMobileMenu" class="navbar-menu-close">
               <svg viewBox="0 0 1024 1024" class="navbar-icon02">
@@ -48,18 +30,14 @@
             </div>
           </div>
           <nav class="navigation-links-nav navigation-links-root-class-name11">
-            <span class="navbar-link"><span>Home</span></span>
+            <span class="navigation-links-text navbar-link">
+              <span>Latest News</span>
+            </span>
             <span class="navigation-links-text1 navbar-link">
               <span>About</span>
             </span>
             <span class="navigation-links-text2 navbar-link">
-              <span>Features</span>
-            </span>
-            <span class="navigation-links-text3 navbar-link">
-              <span>Blog</span>
-            </span>
-            <span class="navigation-links-text4 navbar-link">
-              <span>Pricing</span>
+              <span></span>
             </span>
           </nav>
           <button class="navbar-primary-btn button-primary button">
@@ -67,8 +45,8 @@
           </button>
         </div>
         <div class="navbar-social-media">
-          <span class="navbar-text"><span>Follow us</span></span>
-          <div class="navbar-container1">
+          <span class="navbar-text1"><span>Follow us</span></span>
+          <div class="navbar-container2">
             <svg viewBox="0 0 1024 1024" class="navbar-icon04">
               <path
                 d="M384 384h177.106v90.782h2.532c24.64-44.194 84.958-90.782 174.842-90.782 186.946 0 221.52 116.376 221.52 267.734v308.266h-184.61v-273.278c0-65.184-1.334-149.026-96.028-149.026-96.148 0-110.82 70.986-110.82 144.292v278.012h-184.542v-576z"
@@ -99,8 +77,17 @@
           </div>
         </div>
       </div>
-      <button class="button-primary button navbar-primary-btn1">
-        <span>Get started</span>
+      <nav class="navigation-links-nav navigation-links-root-class-name10">
+        <span class="navigation-links-text navbar-link">
+          <span>Latest News</span>
+        </span>
+        <span class="navigation-links-text1 navbar-link">
+          <span>About</span>
+        </span>
+        <span class="navigation-links-text2 navbar-link"><span></span></span>
+      </nav>
+      <button class="navbar-primary-btn1 button-primary button">
+        <span>Donate</span>
       </button>
     </header>
   </div>
