--- a/components/navbar.css
+++ b/components/navbar.css
@@ -7,11 +7,12 @@
 .navigation-links-text {
   color: #ffffff;
 }
-.navigation-links-text1 {
+.navigation-links-navlink {
   color: #ffffff;
   margin-left: var(--dl-space-space-twounits);
+  text-decoration: none;
 }
-.navigation-links-text2 {
+.navigation-links-text1 {
   margin-left: var(--dl-space-space-twounits);
 }
 
@@ -27,11 +28,11 @@
     align-items: flex-start;
     flex-direction: column;
   }
-  .navigation-links-text1 {
+  .navigation-links-navlink {
     margin-left: 0;
     margin-bottom: var(--dl-space-space-unit);
   }
-  .navigation-links-text2 {
+  .navigation-links-text1 {
     margin-left: 0;
     margin-bottom: var(--dl-space-space-unit);
   }
@@ -153,18 +154,15 @@
   fill: var(--dl-color-backgrounds-primary);
   cursor: pointer;
 }
-.navbar-primary-btn1 {
-  color: #000000;
-  background-color: #6bd9e4;
+.navbar-button {
+  padding-top: var(--dl-space-space-halfunit);
+  padding-bottom: var(--dl-space-space-halfunit);
 }
 .navbar-root-class-name {
   background-color: var(--dl-color-backgrounds-green);
 }
 @media(max-width: 767px) {
   .navbar-nav {
-    display: none;
-  }
-  .navbar-primary-btn1 {
     display: none;
   }
 }
