--- a/components/navbar.html
+++ b/components/navbar.html
@@ -31,12 +31,12 @@
           </div>
           <nav class="navigation-links-nav navigation-links-root-class-name11">
             <span class="navigation-links-text navbar-link">
-              <span>Latest News</span>
+              <span>Latest Alerts</span>
             </span>
-            <span class="navigation-links-text1 navbar-link">
+            <a href="about.html" class="navigation-links-navlink navbar-link">
               <span>About</span>
-            </span>
-            <span class="navigation-links-text2 navbar-link">
+            </a>
+            <span class="navigation-links-text1 navbar-link">
               <span></span>
             </span>
           </nav>
@@ -79,16 +79,14 @@
       </div>
       <nav class="navigation-links-nav navigation-links-root-class-name10">
         <span class="navigation-links-text navbar-link">
-          <span>Latest News</span>
+          <span>Latest Alerts</span>
         </span>
-        <span class="navigation-links-text1 navbar-link">
+        <a href="about.html" class="navigation-links-navlink navbar-link">
           <span>About</span>
-        </span>
-        <span class="navigation-links-text2 navbar-link"><span></span></span>
+        </a>
+        <span class="navigation-links-text1 navbar-link"><span></span></span>
       </nav>
-      <button class="navbar-primary-btn1 button-primary button">
-        <span>Donate</span>
-      </button>
+      <button class="navbar-button button"><span>Donate</span></button>
     </header>
   </div>
 </div>
