--- a/components/navigation-links.html
+++ b/components/navigation-links.html
@@ -2,9 +2,11 @@
   <link href="./navigation-links.css" rel="stylesheet" />
   <nav class="navigation-links-nav">
     <span class="navigation-links-text navbar-link">
-      <span>Latest News</span>
+      <span>Latest Alerts</span>
     </span>
-    <span class="navigation-links-text1 navbar-link"><span>About</span></span>
-    <span class="navigation-links-text2 navbar-link"><span></span></span>
+    <a href="about.html" class="navigation-links-navlink navbar-link">
+      <span>About</span>
+    </a>
+    <span class="navigation-links-text1 navbar-link"><span></span></span>
   </nav>
 </div>
