--- a/home.css
+++ b/home.css
@@ -7,11 +7,12 @@
 .navigation-links-text {
   color: #ffffff;
 }
-.navigation-links-text1 {
+.navigation-links-navlink {
   color: #ffffff;
   margin-left: var(--dl-space-space-twounits);
+  text-decoration: none;
 }
-.navigation-links-text2 {
+.navigation-links-text1 {
   margin-left: var(--dl-space-space-twounits);
 }
 
@@ -27,11 +28,11 @@
     align-items: flex-start;
     flex-direction: column;
   }
-  .navigation-links-text1 {
+  .navigation-links-navlink {
     margin-left: 0;
     margin-bottom: var(--dl-space-space-unit);
   }
-  .navigation-links-text2 {
+  .navigation-links-text1 {
     margin-left: 0;
     margin-bottom: var(--dl-space-space-unit);
   }
@@ -153,18 +154,15 @@
   fill: var(--dl-color-backgrounds-primary);
   cursor: pointer;
 }
-.navbar-primary-btn1 {
-  color: #000000;
-  background-color: #6bd9e4;
+.navbar-button {
+  padding-top: var(--dl-space-space-halfunit);
+  padding-bottom: var(--dl-space-space-halfunit);
 }
 .navbar-root-class-name {
   background-color: var(--dl-color-backgrounds-green);
 }
 @media(max-width: 767px) {
   .navbar-nav {
-    display: none;
-  }
-  .navbar-primary-btn1 {
     display: none;
   }
 }
@@ -189,6 +187,7 @@
   line-height: 1.5;
 }
 .copyright-root-class-name {
+  width: 100%;
   height: var(--dl-size-size-xsmall);
   background-color: #ffffff;
 }
@@ -221,7 +220,7 @@
   display: flex;
   position: relative;
   padding-top: var(--dl-space-space-twounits);
-  background-color: #8e8e8e;
+  background-color: #585858;
 }
 .home-max-width {
   width: 1000px;
@@ -326,7 +325,7 @@
   width: 24px;
   height: 24px;
 }
-.home-text37 {
+.home-text36 {
   height: auto;
 }
 @media(max-width: 991px) {
