--- a/components/navbar.html
+++ b/components/navbar.html
@@ -33,10 +33,10 @@
             <span class="navigation-links-text navbar-link">
               <span>Latest Alerts</span>
             </span>
-            <a href="about.html" class="navigation-links-navlink navbar-link">
-              <span>About</span>
-            </a>
             <span class="navigation-links-text1 navbar-link">
+              <span>About</span>
+            </span>
+            <span class="navigation-links-text2 navbar-link">
               <span></span>
             </span>
           </nav>
@@ -81,10 +81,10 @@
         <span class="navigation-links-text navbar-link">
           <span>Latest Alerts</span>
         </span>
-        <a href="about.html" class="navigation-links-navlink navbar-link">
+        <span class="navigation-links-text1 navbar-link">
           <span>About</span>
-        </a>
-        <span class="navigation-links-text1 navbar-link"><span></span></span>
+        </span>
+        <span class="navigation-links-text2 navbar-link"><span></span></span>
       </nav>
       <button class="navbar-button button"><span>Donate</span></button>
     </header>
