--- a/components/navigation-links.html
+++ b/components/navigation-links.html
@@ -4,9 +4,7 @@
     <span class="navigation-links-text navbar-link">
       <span>Latest Alerts</span>
     </span>
-    <a href="about.html" class="navigation-links-navlink navbar-link">
-      <span>About</span>
-    </a>
-    <span class="navigation-links-text1 navbar-link"><span></span></span>
+    <span class="navigation-links-text1 navbar-link"><span>About</span></span>
+    <span class="navigation-links-text2 navbar-link"><span></span></span>
   </nav>
 </div>
